# smartcard-agent

./: .env.example  .gitignore  .prettierrc  README.md  design-service.md  design.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
agent-service/: .env.example  README.md  pyproject.toml
agent-service/.skills/read_iccid/: __init__.py  skill.md
agent-service/agent_service/: __init__.py  main.py
agent-service/agent_service/agents/: __init__.py
agent-service/agent_service/agents/core/: __init__.py  agent_core.py  tool_scheduler.py
agent-service/agent_service/agents/graph/: __init__.py  workflow.py
agent-service/agent_service/agents/tools/: __init__.py  builtin.py
agent-service/agent_service/apdu/builders/: __init__.py  auth_builder.py  read_builder.py  select_builder.py
agent-service/agent_service/apdu/constants/: file_ids.py  sw_codes.py
agent-service/agent_service/apdu/parsers/: fcp_parser.py  sw_parser.py
agent-service/agent_service/api/: __init__.py  agent.py  config.py  events.py  session.py  smartcard.py
agent-service/agent_service/config/: __init__.py  logging.py  settings.py
agent-service/agent_service/dsl/: __init__.py  compiler.py
agent-service/agent_service/llm/: config.py  llm.py
agent-service/agent_service/models/: llm.py
agent-service/agent_service/runtime/: checkpoint.py  context.py  retry_policy.py
agent-service/agent_service/skills/: __init__.py  registry_extension.py
agent-service/agent_service/skills/base/: __init__.py  registry.py
agent-service/agent_service/utils/: __init__.py  database.py
agent-service/src/: main.py
agent-service/src/apdu/: __init__.py
agent-service/src/api/: agent.py  session.py
agent-service/src/config/: settings.py
agent-service/src/dsl/: compiler.py
agent-service/src/llm/: __init__.py  config.py  llm.py
agent-service/src/models/: __init__.py  session.py
agent-service/src/runtime/: checkpoint.py
agent-service/src/skills/: registry_extension.py
python-service/: .env.example  README.md  download_model.py  pyproject.toml
python-service/.skills/read_iccid/: __init__.py
python-service/scripts/: build_sidecar.py
python-service/src/: __init__.py  main.py
python-service/src/agents/: __init__.py
python-service/src/api/: __init__.py  agent.py  config.py  session.py  smartcard.py
python-service/src/config/: logging.py  settings.py
python-service/src/dsl/: compiler.py
python-service/src/llm/: __init__.py  config.py  embeddings.py  llm.py  local_embeddings.py
python-service/src/models/: __init__.py  file.py  llm.py  session.py  structured_output.py
python-service/src/runtime/: __init__.py  checkpoint.py  context.py
python-service/src/services/: __init__.py  file_service.py  rag_service.py
python-service/src/skills/: __init__.py  registry_extension.py
python-service/src/tools/: __init__.py
python-service/src/utils/: __init__.py  database.py
python-service/src/vectordb/: qdrant_store.py
python-service/tests/: __init__.py  test_apdu_builders.py  test_api_files.py  test_embeddings.py  test_file_service.py  test_llm.py  test_pcsc_client.py  test_skills.py  test_timing.py  test_workflow.py
rag-service/: .env.example  README.md  pyproject.toml
rag-service/rag_service/: __init__.py  main.py
rag-service/rag_service/api/: __init__.py  chunks.py  documents.py  files.py  knowledge_bases.py  rag.py
rag-service/rag_service/config/: __init__.py  logging.py  settings.py
rag-service/rag_service/llm/: __init__.py  config.py  llm.py
rag-service/rag_service/models/: __init__.py  chunk.py  document.py  embedding.py  file.py  knowledge_base.py  processing_log.py
rag-service/rag_service/services/: chunk_service.py  docling_chunker.py  document_service.py  embedding_service.py  file_service.py  knowledge_base_service.py  processing_log_service.py  rag_service.py
rag-service/rag_service/smartcard_knowledge_base/: __init__.py
rag-service/rag_service/utils/: database.py
rag-service/rag_service/vectordb/: config.py  qdrant_store.py
rag-service/src/: main.py
rag-service/src/api/: files.py  rag.py
rag-service/src/llm/: __init__.py
rag-service/src/models/: embedding.py
rag-service/src/services/: __init__.py  rag_service.py
rag-service/src/utils/: __init__.py
rag-service/src/vectordb/: __init__.py  qdrant_store.py
rag-service/tests/: README.md  gpc_first_50_docling_chunks.json  gpc_first_50_docling_output.txt  gpc_first_50_parsed_output.txt  test_docling_pdf.py  test_unstructured_pdf.py
(+175 files in other folders)
